<resources>
    <string name="app_name">Fractal Flower</string>
    <string name="clearCanvasButtonText">Clear</string>
    <string name="generateCanvasButtonText">Generate</string>
    <string name="addCanvasButtonText">Vibrate</string>

    <string name="action_settings">Settings</string>
    <string name="action_test_anim">Test Animation</string>
    <string name="action_start_game">Start Game</string>

    <string name="replay_animation">Reset</string>

    <string name="title_activity_display_settings">DisplaySettingsActivity</string>
    <string name="setCenterPetalsText">Center</string>
    <string name="setColorSpinnerText">Color</string>
    <string-array name="colorChoices">
        <item>Pastel</item>
        <item>Purple</item>
        <item>Yellow</item>
        <item>Pink</item>
        <item>Blue</item>
        <item>Orange</item>
    </string-array>
    <string name="setNarrowPetalText">Narrow</string>
    <string name="setMediumPetalText">Medium</string>
    <string name="setWidePetalText">Wide</string>
    <string name="setSmallFlowerText">Small</string>
    <string name="setMediumFlowerText">Medium</string>
    <string name="setLargeFlowerText">Large</string>
    <string name="title_activity_start_game">StartGameActivity</string>

    <string name="hello_blank_fragment_1">fragment level track</string>
    <string name="level_track_reset">Reset</string>
    <string name="hello_blank_fragment_2">fragment level screen</string>
</resources>
