<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"

    android:orientation="vertical"

    tools:context="com.example.lili.fractalflower.DisplaySettingsActivity"
    tools:showIn="@layout/activity_display_settings"

    android:id="@+id/display_settings"
    >

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setCenterPetalsText"
        android:id="@+id/centerPetalsSwitch"
        />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setColorSpinnerText"
        android:id="@+id/colorSpinner"
        />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/setNarrowPetalButton"
            android:text="@string/setNarrowPetalText"
            android:onClick="onRadioButtonClicked"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/setMediumPetalButton"
            android:text="@string/setMediumPetalText"
            android:onClick="onRadioButtonClicked"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/setWidePetalButton"
            android:text="@string/setWidePetalText"
            android:onClick="onRadioButtonClicked"
        />
    </RadioGroup>

</LinearLayout>
